--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,8 @@
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "axios": "^0.18.0",
     "vue": "^2.5.22",
-    "vuetify": "^1.3.0"
+    "vuetify": "^1.3.0",
+    "webpack": "4.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
@@ -25,6 +26,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
+    "terser": "^3.14.1",
     "vue-cli-plugin-vuetify": "^0.4.6",
     "vue-template-compiler": "^2.5.21",
     "vuetify-loader": "^1.0.5"
