--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,7 @@
           "browser": true,
           "node": true,
           "commonjs": true,
-          "es6": true
+          "es6": true,
+          "jest": true
       }
   }
