--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-promise": ">=4.0.1",
     "eslint-plugin-standard": ">=4.0.0",
     "eslint-plugin-vue": "^5.2.2",
+    "husky": "^2.2.0",
     "jest": "^24.1.0",
     "nodemon": "^1.18.9",
     "prettier": "^1.16.4",
@@ -50,5 +51,12 @@
     "stylus-loader": "^3.0.2",
     "ts-jest": "^24.0.2",
     "vue-jest": "^3.0.3"
+  },
+    "husky": {
+      "hooks": {
+        "pre-commit": "yarn lint --fix",
+        "pre-push": "yarn test"
+      }
+    
   }
 }
