Make static generate work

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,4 +3,9 @@ version: 0.2
 phases:
   build:
     commands:
-      - aws s3 sync src s3://$DEPLOY_BUCKET/
+      - "npm install"
+      - "npm run-script build"
+  post_build:
+    commands:
+      - echo Completed building. Uploading artifacts to $DEPLOY_BUCKET
+      - aws s3 sync out s3://$DEPLOY_BUCKET/
