Add header with links to blog and social media

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "echo 'No tests. Nice!'"
   },
   "dependencies": {
+    "fontfaceobserver": "^2.1.0",
     "next": "^9.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
