--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,11 @@ name: Deploy
 
 on: [push]
 
+#on:
+#  push:
+#    branches:
+#      - master
+
 jobs:
   build:
     timeout-minutes: 10
@@ -34,6 +39,17 @@ jobs:
           pip install -r requirements.txt
       - name: Build CloudFormation
         run: python templates/static_website.py
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - name: Deploy CloudFormation
+        uses: aws-actions/aws-cloudformation-github-deploy@v1
+        with:
+          name: rob-kenis-dot-com
+          template: output/static_website.json
   azure:
     needs: build
     runs-on: ubuntu-latest
