Use full path for the cloudformation json
Not really a proper way to pass working directories
to steps with `uses:`

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           name: rob-kenis-dot-com
-          template: output/static_website.json
+          template: deploy/aws/output/static_website.json
   azure:
     needs: build
     runs-on: ubuntu-latest
