--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test": "echo 'No tests. Nice!'"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^11.1.2",
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
