--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "next",
     "build": "next build && next export",
     "start": "next start",
-    "test": "echo 'No tests. Nice!'"
+    "test": "echo 'No tests. Nice!'",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
@@ -18,8 +20,14 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@storybook/addon-actions": "^6.3.10",
+    "@storybook/addon-essentials": "^6.3.10",
+    "@storybook/addon-links": "^6.3.10",
+    "@storybook/react": "^6.3.10",
     "@types/node": "^16.10.3",
     "@types/react": "^17.0.27",
+    "babel-loader": "^8.2.2",
     "typescript": "^4.4.3"
   }
 }
