--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^11.1.2",
+    "antd": "^4.16.13",
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
