--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "next start",
     "test": "echo 'No tests. Nice!'",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
@@ -28,7 +30,11 @@
     "@storybook/react": "^6.3.10",
     "@types/node": "^16.10.3",
     "@types/react": "^17.0.27",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
     "babel-loader": "^8.2.2",
+    "eslint": "7.32.0",
+    "eslint-config-next": "12.0.2",
     "typescript": "^4.4.3"
   }
 }
