--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,13 @@ jobs:
       - run: yarn build
         env:
           CI: true
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: '0.85.0'
+      - name: Build Hugo
+        run: hugo --minify
+        working-directory: blog/
       - uses: unfor19/install-aws-cli-action@v1
       - name: Upload website
         run: |
@@ -50,6 +57,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        working-directory: blog/ # Deploy Hugo until the NextJS blog is finished
   azure:
     runs-on: ubuntu-latest
     steps:
