Use dracula theme for code highlighting

--- a/blog/config.toml
+++ b/blog/config.toml
@@ -92,3 +92,18 @@ link = "https://linkedin.com/in/robkenis"
 [[params.social]]
 icon = "ti-github"
 link = "https://github.com/RobKenis"
+
+# code highlighting
+[markup]
+  [markup.highlight]
+    anchorLineNos = false
+    codeFences = true
+    guessSyntax = false
+    hl_Lines = ''
+    lineAnchors = ''
+    lineNoStart = 1
+    lineNos = false
+    lineNumbersInTable = true
+    noClasses = true
+    style = 'dracula'
+    tabWidth = 4
