--- a/package.json
+++ b/package.json
@@ -5,36 +5,7 @@
   "author": "Rob Kenis",
   "private": true,
   "scripts": {
-    "dev": "next",
-    "build": "next build && next export",
-    "start": "next start",
-    "test": "echo 'No tests. Nice!'",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
-  },
-  "dependencies": {
-    "@mdx-js/loader": "^1.6.22",
-    "@next/mdx": "^12.2.4",
-    "antd": "^4.16.13",
-    "next": "^12.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@storybook/addon-actions": "^6.3.10",
-    "@storybook/addon-essentials": "^6.3.10",
-    "@storybook/addon-links": "^6.5.10",
-    "@storybook/react": "^6.3.10",
-    "@types/node": "^16.10.3",
-    "@types/react": "^17.0.27",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
-    "babel-loader": "^8.2.2",
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.2",
-    "typescript": "^4.7.4"
+    "dev": "hugo",
+    "build": "hugo -D"
   }
 }
