--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -11,7 +11,7 @@ jobs:
       - name: Python Linter
         uses: sunnysid3up/python-linter@master
         with:
-          source: "deploy/aws/"
+          source: "deploy/aws/templates/"
           mypy-options: "--ignore-missing-imports --show-error-codes"
           pylint-options: "--rcfile=setup.cfg"
           isort-options: "-w 100"
