--- a/.github/workflows/workshops.yaml
+++ b/.github/workflows/workshops.yaml
@@ -40,12 +40,13 @@ jobs:
 
   aws-lambda:
     runs-on: ubuntu-latest
+    needs: [ cloudformation ]
     steps:
       - uses: actions/checkout@v3
       - uses: unfor19/install-aws-cli-action@v1
       - name: Upload website
         run: |
-          BUCKET_NAME=$(aws cloudformation describe-stacks --stack-name rob-kenis-dot-com | jq -r '.Stacks[].Outputs[] | select(.OutputKey=="WebsiteOriginBucketName") | .OutputValue')
+          BUCKET_NAME=$(aws cloudformation describe-stacks --stack-name workshops-dot-rob-kenis-dot-com | jq -r '.Stacks[].Outputs[] | select(.OutputKey=="WebsiteOriginBucketName") | .OutputValue')
           aws s3 sync workshops/aws-lambda/ s3://$BUCKET_NAME/
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
