--- a/.github/workflows/workshops.yaml
+++ b/.github/workflows/workshops.yaml
@@ -38,7 +38,7 @@ jobs:
           template: deploy/aws/output/workshops.json
           no-fail-on-empty-changeset: "1"
 
-  aws-lambda:
+  aws-serverless-basics:
     runs-on: ubuntu-latest
     needs: [ cloudformation ]
     steps:
@@ -47,7 +47,7 @@ jobs:
       - name: Upload website
         run: |
           BUCKET_NAME=$(aws cloudformation describe-stacks --stack-name workshops-dot-rob-kenis-dot-com | jq -r '.Stacks[].Outputs[] | select(.OutputKey=="WebsiteOriginBucketName") | .OutputValue')
-          aws s3 sync workshops/aws-lambda/ s3://$BUCKET_NAME/
+          aws s3 sync workshops/aws-serverless-basics/ s3://$BUCKET_NAME/
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
